assets/css/anthonystyle.css
@import url('https://fonts.googleapis.com/css2?family=Open+Sans:wght@300;400;700;800&display=swap');

* {
    font-family: "Open Sans", Helvetica, sans-serif;
}

#headshot {
    padding-left: 4vw;
    max-width: 25%;
    height: auto;
    width: auto;
}

.socialbuttons {
    max-width: 65%;
    height: auto;
    width: auto;
    margin-right: 0;
    margin-left: 0;
    padding-right: 0;
    opacity: 1;
}

.socialbuttons:hover {
    opacity: 0.7;
}

.socialwrapper {
    margin-right: 0;
    margin-left: 0;
    padding-right: 0;
}

#base {
    display: flex;
    align-items: center;
    flex-direction: column;
    justify-content: center;
    /* temp colors */
}

#hi-block {
    background-color: white;
    display: flex;
    align-items: center;
    justify-content: center;
    flex-direction: row;
    /* border-width: 2px;
    border-style: solid;
    border-color: red; */
    /* temp borders */
}

hr {
    border-top: 0.3vh solid #0193E5;
    width: 88%;
    margin-left: 0;
    margin-top: 2%;
    margin-bottom: 1%;
}

h1 {
    font-size: 3.9vw;
    font-weight: 700;
    margin-bottom: 0%;
    padding-bottom: 0%;
}

h2 {
    margin-top: 0;
    padding-top: 0;
    font-size: 1.8vw;
    font-weight: 100;
    margin-bottom: 0;
}

h2.food {
    font-size: 2.4vw;
    margin-bottom: 2vh;
}

h3 {
    margin-top: 0%;
    padding-top: 0%;
    font-size: 1.6vw;
    font-weight: 700;
    margin-bottom: -1vh;
    padding-bottom: 0;
}

h4 {
    margin-top: -0.1vh;
    padding-top: 0;
    font-size: 1.35vw;
    font-weight: 300;
    margin-bottom: 0;
}

h4.food {
    padding: 2vh;
    width: 80%;
    font-size: 1.6vw;
    text-align: center;
}

h4.stats {
    font-weight: 500;
    color: #0193E5
}

p {
    margin-top: 0;
    font-size: 1.35vw;
    font-weight: 300;
    padding-right: 1vw;
    color: #252525
}

p.food {
    font-size: 1.4vw;
    color: #252525
}

h5 {
    margin-top: 0;
    padding-top: 0;
    font-size: 1.1vw;
    font-weight: 400;
    margin-bottom: 0;
    color: #0193E5
}

h5.stats {
    font-weight: 400;
    margin-bottom: 0;
    color: #303030
}

#intro-block {
    margin-top: 0;
    padding-top: 0;
    padding-bottom: 0;
    margin-bottom: 0;
    max-width: 90%;
    justify-content: left;
    /* border-bottom: 8px solid #;
    margin-bottom: 1%; */
}

#title-block {
    max-width: 60%;
    /* max-height: 30%; */
    display: flex;
    flex-direction: column;
    z-index: 100;
    margin: -1%;
    /* border-width: 2px;
    border-style: solid;
    border-color: blue; */
}

#blue-buttons {
    display: flex;
    flex-direction: row;
    justify-content: space-between;
    align-items: top;
    /* border-width: 2px;
    border-style: solid;
    border-color: green; */
    width: 105%;
    opacity: 1;
}

.tiled {
    display: flex;
    flex-direction: row;
    justify-content: space-between;
    align-items: top;
    /* border-width: 2px;
    border-style: solid;
    border-color: green; */
    width: 80vw;
    flex-wrap: wrap;
}

.content {
    display: flex;
    flex-direction: column;
    justify-content: top;
    background-color: white;
    width: 23.5vw; 
    /* maintains proportional box size regardless of screen */
    height: auto;
    padding-left: 1.5vw;
    padding-bottom: 2vw;
    padding-top: 1.5vw;
    padding-right: 0.5vw;
    border-radius: 2.5vw;
    margin-bottom: 1.5vh;
    margin-top: 1.5vh;
    overflow: scroll;
}

a.link {
    color: inherit;
    text-decoration-style: dashed;
    font-weight: 400;
    color: #0193E5
}

.item {
    border-left: 0.15vw solid #0193E5;
    padding-left: 0.25vw;
    margin-left: 0;
    margin-top: 2vh;
    margin-bottom: 0;
    padding-top: 0;
    width: 100%;
}


#bottom {
    background-color: lightgray;
    display: flex;
    flex-direction: column;
    align-items: center;
    width: 100%;
    padding-top: 1.5vh;
    padding-bottom: 1.5vh;
}

#footer {
    background-color: #252525;
    display: flex;
    flex-direction: column;
    justify-content: center;
    align-items: center;
    padding: 1vh;
}

#footer-text {
    font-size: 0.9vw;
    font-weight: 300;
    color: white;
    opacity: 0.8;
    padding: 0;
    margin: 0;
}

#photobutton {
    opacity: 1;
}

#photobutton:hover {
    opacity: 0.7;
}

#header {
    background-color: #252525;
    display: flex;
    flex-direction: row;
    justify-content: space-between;
    align-items: center;
    padding: 2vh;
}

a.header {
    color: white;
    text-decoration: none;
    padding: 0.8vh;
    border-left: 0.3vw solid white;
    border-top: 0.3vw solid white;
    letter-spacing: 0.4vw;
}

p.header {
    color: white;
    text-decoration: none;
    font-size: 1.6vw;
    margin-bottom: 0;
    padding-bottom: 0;
    font-weight: 400;
    border-right: 0.15vw dashed white;
}

a.header:hover {
    opacity: 0.7;
}

#photopage {
    display: flex;
    flex-direction: column;
    align-items: center;
    justify-content: top;
    /* border-width: 2px;
    border-style: solid;
    border-color: green; */
}

.photoblock {
    display: flex;
    flex-direction: column;
    align-items: left;
    justify-content: top;
    /* border-width: 2px;
    border-style: solid;
    border-color: red; */
    width: 80%;
    margin-top: 2vh;
    margin-bottom: 2vh;
    padding: 1vh;
}

.imagegrid {
    display: flex;
    justify-content: space-between;
}

.grid-photo {
    flex: 1;
    max-width: 32%;
    height: auto;
    width: auto;
}

.landscape-photo {
    max-width: 98%;
    height: auto;
    width: auto;
}

@media (max-width: 800px) {

    #headshot {
        padding-left: 4vw;
        max-width: 30%;
    }

    #title-block {
        max-width: 80%;
        margin: 0%;
    }

    h1 {
        font-size: 5vw;
    }

    h2 {
        font-size: 2.5vw;
    }

    h3 {
        font-size: 2.1vw;
    }

    p,
    h4 {
        font-size: 1.8vw;
    }

    h5 {
        font-size: 1.5vw;
    }

    .content {
        width: 30%;
        margin-bottom: 0.8vh;
        margin-top: 0.8vh;
        padding-right: 0.8vw;
    }

    .item {
        margin-top: 1.4vh;
        border-left: 0.25vw solid #0193E5;
    }


    .tiled {
        width: 96%;
    }

    #footer-text {
        font-size: 1.6vw
    }

    #bottom {
        padding-top: 0.5vh;
        padding-bottom: 0.5vh;
    }

    hr {
        border-top: 0.15vh solid #0193E5;
        margin-bottom: 0;
        padding-bottom: 0;
    }

    .socialbuttons {
        margin-top: 0.5vw;
        padding-top: 0vw;
    }
}

/* SMARTPHONES */

@media (max-width: 440px) {

    #headshot {
        padding-left: 0;
        max-width: 28%;
    }

    #title-block {
        max-width: 95%;
        margin: 0;
    }

    h1 {
        font-size: 4.5vw;
    }

    h2 {
        font-size: 2.7vw;
    }

    h3 {
        font-size: 3.3vw;
    }

    p,
    h4 {
        font-size: 3.1vw;
    }

    h5 {
        font-size: 2.7vw;
        margin-top: -0.2vh;
    }

    .content {
        width: 87%;
        margin-bottom: 1vh;
        margin-top: 1vh;
        padding: 3vw;
        overflow: auto;
    }

    .item {
        margin-top: 1.4vh;
        border-left: 0.6vw solid #0193E5;
        padding-left: 1vw;
        width: 80%;
    }


    .tiled {
        width: 95%;
        flex-direction: column;
        justify-content: center;
        align-items: center;
        flex-wrap: none;
    }

    #footer-text {
        text-align: center;
        font-size: 2.7vw;
        padding: 2vw;
    }

    #bottom {
        padding-top: 0.8vh;
        padding-bottom: 0.8vh;
    }

    hr {
        border-top: 0.15vh solid #0193E5;
        margin-bottom: 0;
        padding-bottom: 0;
    }

    .socialwrapper {
        margin-top: -0.5vh;
        padding-top: 0;
    }

    .socialbuttons {
        margin-top: 0;
        padding-top: 0vw;
        max-width: 80%;
    }
}

